write 5th  para in Intro, #15

--- a/latex/akita.bib
+++ b/latex/akita.bib
@@ -1,12 +1,125 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tetsuya Akita at 2022-02-07 15:07:05 +0900 
+%% Created for Tetsuya Akita at 2022-02-08 17:13:14 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{hilborn2013quantitative,
+	address = {New York},
+	author = {Hilborn, Ray and Walters, Carl J},
+	date-added = {2022-02-08 17:10:47 +0900},
+	date-modified = {2022-02-08 17:13:13 +0900},
+	publisher = {Chapman and Hall},
+	title = {Quantitative fisheries stock assessment: choice, dynamics and uncertainty},
+	year = {1992}}
+
+@article{doi:10.1146/annurev.ecolsys.32.081501.114037,
+	abstract = { ▪ Abstract Contributions from the field of population biology hold promise for understanding and managing invasiveness; invasive species also offer excellent opportunities to study basic processes in population biology. Life history studies and demographic models may be valuable for examining the introduction of invasive species and identifying life history stages where management will be most effective. Evolutionary processes may be key features in determining whether invasive species establish and spread. Studies of genetic diversity and evolutionary changes should be useful for understanding the potential for colonization and establishment, geographic patterns of invasion and range expansion, lag times, and the potential for evolutionary responses to novel environments, including management practices. The consequences of biological invasions permit study of basic evolutionary processes, as invaders often evolve rapidly in response to novel abiotic and biotic conditions, and native species evolve in response to the invasion. },
+	author = {Sakai, Ann K. and Allendorf, Fred W. and Holt, Jodie S. and Lodge, David M. and Molofsky, Jane and With, Kimberly A. and Baughman, Syndallas and Cabin, Robert J. and Cohen, Joel E. and Ellstrand, Norman C. and McCauley, David E. and O'Neil, Pamela and Parker, Ingrid M. and Thompson, John N. and Weller, Stephen G.},
+	date-added = {2022-02-08 16:29:49 +0900},
+	date-modified = {2022-02-08 16:29:49 +0900},
+	doi = {10.1146/annurev.ecolsys.32.081501.114037},
+	eprint = {https://doi.org/10.1146/annurev.ecolsys.32.081501.114037},
+	journal = {Annual Review of Ecology and Systematics},
+	number = {1},
+	pages = {305-332},
+	title = {The Population Biology of Invasive Species},
+	url = {https://doi.org/10.1146/annurev.ecolsys.32.081501.114037},
+	volume = {32},
+	year = {2001},
+	bdsk-url-1 = {https://doi.org/10.1146/annurev.ecolsys.32.081501.114037}}
+
+@article{https://doi.org/10.1111/eva.12288,
+	abstract = {Abstract Estimating the rate of exchange of individuals among populations is a central concern to evolutionary ecology and its applications to conservation and management. For instance, the efficiency of protected areas in sustaining locally endangered populations and ecosystems depends on reserve network connectivity. The population genetics theory offers a powerful framework for estimating dispersal distances and migration rates from molecular data. In the marine realm, however, decades of molecular studies have met limited success in inferring genetic connectivity, due to the frequent lack of spatial genetic structure in species exhibiting high fecundity and dispersal capabilities. This is especially true within biogeographic regions bounded by well-known hotspots of genetic differentiation. Here, we provide an overview of the current methods for estimating genetic connectivity using molecular markers and propose several directions for improving existing approaches using large population genomic datasets. We highlight several issues that limit the effectiveness of methods based on neutral markers when there is virtually no genetic differentiation among samples. We then focus on alternative methods based on markers influenced by selection. Although some of these methodologies are still underexplored, our aim was to stimulate new research to test how broadly they are applicable to nonmodel marine species. We argue that the increased ability to apply the concepts of cline analyses will improve dispersal inferences across physical and ecological barriers that reduce connectivity locally. We finally present how neutral markers hitchhiking with selected loci can also provide information about connectivity patterns within apparently well-mixed biogeographic regions. We contend that one of the most promising applications of population genomics is the use of outlier loci to delineate relevant conservation units and related eco-geographic features across which connectivity can be measured.},
+	author = {Gagnaire, Pierre-Alexandre and Broquet, Thomas and Aurelle, Didier and Viard, Fr{\'e}d{\'e}rique and Souissi, Ahmed and Bonhomme, Fran{\c c}ois and Arnaud-Haond, Sophie and Bierne, Nicolas},
+	date-added = {2022-02-08 16:09:39 +0900},
+	date-modified = {2022-02-08 16:09:39 +0900},
+	doi = {https://doi.org/10.1111/eva.12288},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/eva.12288},
+	journal = {Evolutionary Applications},
+	keywords = {connectivity, gene flow, marine conservation, population genomics, population structure},
+	number = {8},
+	pages = {769-786},
+	title = {Using neutral, selected, and hitchhiker loci to assess connectivity of marine populations in the genomic era},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/eva.12288},
+	volume = {8},
+	year = {2015},
+	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/eva.12288},
+	bdsk-url-2 = {https://doi.org/10.1111/eva.12288}}
+
+@article{https://doi.org/10.1111/2041-210X.12922,
+	abstract = {Abstract Dispersal kernels are the standard method in biology for describing and predicting the relationship between dispersal and distance. Statistically fitted dispersal kernels allow observations of a limited number of dispersal events to be extrapolated across a wider landscape, and form the basis of a wide range of theories and methods in ecology, evolution and conservation. Genetic parentage data are an increasingly common source of dispersal information, particularly for species where dispersal is difficult to observe directly. In particular, parentage analysis is now routinely applied to coral reef fish, whose larvae can potentially disperse over many kilometres, and are too small to track in situ. It is not straightforward to estimate dispersal kernels from parentage data, and existing methods all have substantial limitations. These include the omission of important population processes such as density-dependent mortality, and data on unassigned juveniles. Here we develop and proof a new likelihood estimator for fitting dispersal kernels to parentage data, applying it to simulated parentage datasets for coral reef fish on the Great Barrier Reef (GBR). The method incorporates a series of factors not previously considered in other methods: the partial sampling of adults and juveniles on sampled sites; the existence of unassigned dispersers from unsampled habitat patches; and post-settlement processes (e.g. density-dependent mortality) that follow dispersal but precede parentage sampling. Including these additional factors requires an estimate of adult populations on unsampled habitat patches, but the result is a superior estimate of dispersal kernels and mean dispersal distances. Our power analyses suggest that the parentage datasets currently available for reef fishes are large enough to fit accurate dispersal kernels. Based on the analyses in one particular region of the GBR, parentage sampling should be distributed equally between adults and juveniles, and should sample more than 3\% of the adult population. However, while the resulting dispersal kernels offer reasonable estimates of mean dispersal, they fail to capture important variation in realistic dispersal patterns.},
+	author = {Bode, Michael and Williamson, David H. and Harrison, Hugo B. and Outram, Nick and Jones, Geoffrey P.},
+	date-added = {2022-02-08 16:03:00 +0900},
+	date-modified = {2022-02-08 16:03:00 +0900},
+	doi = {https://doi.org/10.1111/2041-210X.12922},
+	eprint = {https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/2041-210X.12922},
+	journal = {Methods in Ecology and Evolution},
+	keywords = {biophysical modelling, connectivity, coral reef fish, Gaussian, genetic markers, Great Barrier Reef, local retention, self-recruitment},
+	number = {3},
+	pages = {490-501},
+	title = {Estimating dispersal kernels using genetic parentage data},
+	url = {https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/2041-210X.12922},
+	volume = {9},
+	year = {2018},
+	bdsk-url-1 = {https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/2041-210X.12922},
+	bdsk-url-2 = {https://doi.org/10.1111/2041-210X.12922}}
+
+@article{doi:10.1080/07352689.2010.481167,
+	author = {Mary V. Ashley},
+	date-added = {2022-02-08 15:03:55 +0900},
+	date-modified = {2022-02-08 15:03:55 +0900},
+	doi = {10.1080/07352689.2010.481167},
+	eprint = {https://doi.org/10.1080/07352689.2010.481167},
+	journal = {Critical Reviews in Plant Sciences},
+	number = {3},
+	pages = {148-161},
+	publisher = {Taylor & Francis},
+	title = {Plant Parentage, Pollination, and Dispersal: How DNA Microsatellites Have Altered the Landscape},
+	url = {https://doi.org/10.1080/07352689.2010.481167},
+	volume = {29},
+	year = {2010},
+	bdsk-url-1 = {https://doi.org/10.1080/07352689.2010.481167}}
+
+@article{https://doi.org/10.1111/j.1365-294X.2010.04688.x,
+	abstract = {Abstract Genetic data are often used to assess `population connectivity' because it is difficult to measure dispersal directly at large spatial scales. Genetic connectivity, however, depends primarily on the absolute number of dispersers among populations, whereas demographic connectivity depends on the relative contributions to population growth rates of dispersal vs. local recruitment (i.e. survival and reproduction of residents). Although many questions are best answered with data on genetic connectivity, genetic data alone provide little information on demographic connectivity. The importance of demographic connectivity is clear when the elimination of immigration results in a shift from stable or positive population growth to negative population growth. Otherwise, the amount of dispersal required for demographic connectivity depends on the context (e.g. conservation or harvest management), and even high dispersal rates may not indicate demographic interdependence. Therefore, it is risky to infer the importance of demographic connectivity without information on local demographic rates and how those rates vary over time. Genetic methods can provide insight on demographic connectivity when combined with these local demographic rates, data on movement behaviour, or estimates of reproductive success of immigrants and residents. We also consider the strengths and limitations of genetic measures of connectivity and discuss three concepts of genetic connectivity that depend upon the evolutionary criteria of interest: inbreeding connectivity, drift connectivity, and adaptive connectivity. To conclude, we describe alternative approaches for assessing population connectivity, highlighting the value of combining genetic data with capture-mark-recapture methods or other direct measures of movement to elucidate the complex role of dispersal in natural populations.},
+	author = {Lowe, Winsor H. and Allendorf, Fred W.},
+	date-added = {2022-02-08 13:20:30 +0900},
+	date-modified = {2022-02-08 13:20:46 +0900},
+	doi = {https://doi.org/10.1111/j.1365-294X.2010.04688.x},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-294X.2010.04688.x},
+	journal = {Molecular Ecology},
+	keywords = {adaptation, demographic connectivity, drift, emigration, F-statistics, gene flow, genetic connectivity, immigration, inbreeding, population dynamics, source--sink, spatial ecology},
+	number = {15},
+	pages = {3038-3051},
+	title = {What can genetics tell us about population connectivity?},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-294X.2010.04688.x},
+	volume = {19},
+	year = {2010},
+	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-294X.2010.04688.x},
+	bdsk-url-2 = {https://doi.org/10.1111/j.1365-294X.2010.04688.x}}
+
+@article{https://doi.org/10.1111/j.1365-294X.1995.tb00227.x,
+	abstract = {Abstract Attempts to study the genetic population structure of large mammals are often hampered by the low levels of genetic variation observed in these species. Polar bears have particularly low levels of genetic variation with the result that their genetic population structure has been intractable. We describe the use of eight hypervariable microsatellite loci to study the genetic relationships between four Canadian polar bear populations: the northern Beaufort Sea, southern Beaufort Sea, western Hudson Bay, and Davis Strait - Labrador Sea. These markers detected considerable genetic variation, with average heterozygosity near 60\% within each population. Interpopulation differences in allele frequency distribution were significant between all pairs of populations, including two adjacent populations in the Beaufort Sea. Measures of genetic distance reflect the geographic distribution of populations, but also suggest patterns of gene flow which are not obvious from geography and may reflect movement patterns of these animals. Distribution of variation is sufficiently different between the Beaufort Sea populations and the two more eastern ones that the region of origin for a given sample can be predicted based on its expected genotype frequency using an assignment test. These data indicate that gene flow between local populations is restricted despite the long-distance seasonal movements undertaken by polar bears.},
+	author = {Paetkau, D. and Calvert, W. and Stirling, I. and Strobeck, C.},
+	date-added = {2022-02-08 11:44:43 +0900},
+	date-modified = {2022-02-08 11:45:06 +0900},
+	doi = {https://doi.org/10.1111/j.1365-294X.1995.tb00227.x},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-294X.1995.tb00227.x},
+	journal = {Molecular Ecology},
+	keywords = {Ursus maritimus, DNA fingerprinting, microsatellite, population structure, population genetics},
+	number = {3},
+	pages = {347-354},
+	title = {Microsatellite analysis of population structure in Canadian polar bears},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-294X.1995.tb00227.x},
+	volume = {4},
+	year = {1995},
+	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-294X.1995.tb00227.x},
+	bdsk-url-2 = {https://doi.org/10.1111/j.1365-294X.1995.tb00227.x}}
 
 @article{10.1093/icesjms/fsac002,
 	abstract = {{We present practical lessons learned from applying the recent close-kin mark--recapture (CKMR) abundance estimation method to thornback ray (Raja clavata). For CKMR, related individuals are identified from their genotypes and their number and pattern is used for abundance estimation. We genotyped over 7000 individuals collected in the Bay of Biscay using Single Nucleotide Polymorphism (SNP) markers finding 99 parent--offspring pairs. The estimated number of adult thornback rays in the central Bay of Biscay was around 135000 (CV 0.19) in 2013. In total, four lessons were drawn: (i) CKMR helps identifying metapopulation structure, which if ignored might affect abundance estimates and/or time trends. There was strong evidence for two distinct local populations of thornback ray with no demographic connectivity. (ii) Demographic sample composition can affect precision and needs to include a range of birth years, which turned out to be difficult for thornback ray. (iii) Reasonable age information for potential offspring is essential. (iv) The sex of potential parents is needed and might be identified from sex-related SNPs. Reliable abundance estimation by CKMR appears feasible for a wide range of species provided that: sampling adequately covers potential local population structure, has appropriate demographic composition, and the age of potential offspring is reasonably well-known.}},
@@ -215,12 +328,12 @@
 	abstract = {Abstract In the last five years, interest in close-kin mark--recapture (CKMR), a variant of mark--recapture that uses genetically inferred kin as `recaptures', has grown dramatically. However, understanding the basis of CKMR, and properly implementing it, remains challenging. This paper describes an R package, CKMRpop, for simulating age-structured populations with user-specified demography, overdispersed variance in reproductive success (allowing for different ratios of effective to census size) and random sampling of individuals. Using compiled code for the simulation makes it feasible to simulate populations of millions of individuals. From the simulation output, pairs of sampled individuals related within a user-specified number of generations are found. Such pairs form the foundation for CKMR inference, and simulating them provides insight for understanding the statistical basis for CKMR and for assessing the feasibility of CKMR in different scenarios. We predict that CKMRpop will serve as an important tool for researchers contemplating CKMR estimation of population size. Furthermore, the methods presented here for identifying and categorizing relationships beyond half-siblings allow a more complete picture of the wide variety of kin pairs encountered in populations. This identifies the fraction of kin pairs that may not be the target of a CKMR experiment, but may be inadvertently mistaken for a more closely related `target' kin pair. Additionally, as more distant kin categories will likely be accurately inferred from increasingly available and inexpensive whole genome resequencing, understanding the distributions of more distant relationships in populations is a first step towards broadening the scope of CKMR to include them.},
 	author = {Anderson, Eric C.},
 	date-added = {2022-01-14 18:14:09 +0900},
-	date-modified = {2022-01-14 18:16:06 +0900},
+	date-modified = {2022-02-08 14:09:37 +0900},
 	doi = {https://doi.org/10.1111/1755-0998.13513},
 	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/1755-0998.13513},
 	journal = {Molecular Ecology Resources},
 	keywords = {abundance estimation, CKMR, close-kin mark--recapture, pairwise relationships},
-	title = {CKMRpop: Forward-in-time simulation and tabulation of pairwise kin relationships in age-structured populations},
+	title = {{CKMRpop}: Forward-in-time simulation and tabulation of pairwise kin relationships in age-structured populations},
 	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/1755-0998.13513},
 	year = {in press},
 	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/1755-0998.13513},
@@ -278,14 +391,14 @@
 	abstract = {Abstract Knowing how many individuals there are in a population is a fundamental problem in the management and conservation of freshwater and marine fish. We compare abundance estimates (census size, Nc) in seven brook trout Salvelinus fontinalis populations using standard mark--recapture (MR) and the close-kin mark--recapture (CKMR) method. Our purpose is to validate CKMR as a method for estimating population size. Close-kin mark--recapture is based on the principle that an individual's genotype can be considered a ``recapture'' of the genotypes of each of its parents. Assuming offspring and parents are sampled independently, the number of parent--offspring pairs (POPs) genetically identified in these samples can be used to estimate abundance. We genotyped (33 microsatellites) and aged c. 2,400 brook trout individuals collected over 5 consecutive years (2014--2018). We provide an alternative interpretation of CKMR in terms of the Lincoln--Petersen estimator in which the parents are considered as tagging the offspring rather than the offspring ``recapturing'' the parents. Despite various sources of uncertainty, we find close agreement between standard MR abundance estimates obtained through double-pass electrofishing and CKMR estimates, which require information on age-specific fecundity, and population- and age-specific survival rates. Population sizes () are estimated to range between 300 and 6,000 adult individuals. Our study constitutes the first in situ validation of CKMR and establishes it as a useful method for estimating population size in aquatic systems where assumptions of random sampling and thorough mixing of individuals can be met.},
 	author = {Ruzzante, Daniel E. and McCracken, Gregory R. and F{\o}rland, Brage and MacMillan, John and Notte, Daniela and Buhariwalla, Colin and Mills Flemming, Joanna and Skaug, Hans},
 	date-added = {2021-08-19 14:57:21 +0900},
-	date-modified = {2021-08-19 15:10:50 +0900},
+	date-modified = {2022-02-08 14:09:48 +0900},
 	doi = {https://doi.org/10.1111/2041-210X.13243},
 	eprint = {https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/2041-210X.13243},
 	journal = {Methods in Ecology and Evolution},
 	keywords = {abundance estimation, brook trout, census size, close-kin mark--recapture, genetic tagging, Lincoln--Petersen, parent--offspring pairs, population size},
 	number = {9},
 	pages = {1445-1453},
-	title = {Validation of close-kin mark--recapture (CKMR) methods for estimating population abundance},
+	title = {Validation of close-kin mark--recapture ({CKMR}) methods for estimating population abundance},
 	url = {https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/2041-210X.13243},
 	volume = {10},
 	year = {2019},
