--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -85,47 +85,33 @@ Tetsuya Akita$^{a}$\thanks{
 
 \section{INTRODUCTION}
 
-
-
-%conn & bravington , Trenkel & bravingtonも引用しないと
-% MigEst by Wangとの比較も...もう一度よくWang 2014を読む！どうやって推定しているのか...
-%% 今回提案した方法は、ゴーストポップがあっても大丈夫
-%% MigEstは、親は動かず、子が移動することを想定している
-%% N = Neを想定
-%移動には２種類ある。子の移動と親の移動である。前者は花粉やラーバなど。connectivityは前者が大事かもで、どこまで遠く行くのかも重要。移動する生物の場合、後者も重要。
-
-%contemporary migration rateはほとんどBaysAssを使っている人の用語
-
 % 1: Estimating contemporary migration is important for both ecologically and evolutionally reasons
 
-In conservation and wildlife management, estimating the current ecological information is essential for monitoring population levels and proposing management strategies. Contemporary migration rate, the recent rate of movement of individuals or gametes between pre-defined populations, is a critical component to determine the current degree of gene flow and synchrony among the population \cite[]{Waples_2006_MolEcol}. Therefore, estimation of contemporary migration rate provides information about the degree of genetic differentiation and demographic dependency, which can delineate evolutionarily significant units and identify appropriate management units \cite[]{moritz1994defining, PALSBOLL200711}. In addition, the availability of migration rate can link to underlying population dynamics, allowing for a more precise and flexible evaluation of a management for many relevant topics including stock assessment in fisheries \cite[]{methot2013stock}, species range expansion/construction (REF), effective reserve network design (REF), and the invasive species control (REF). 
+In conservation and wildlife management, estimating the current ecological information is essential for monitoring population levels and proposing management strategies. Contemporary migration rate, the recent rate of movement of individuals or gametes between pre-defined populations, is a critical component to determine the current degree of gene flow and synchrony among the population \cite[]{Waples_2006_MolEcol, https://doi.org/10.1111/j.1365-294X.2010.04688.x}. Therefore, estimation of contemporary migration rate provides information about the degree of genetic differentiation and demographic dependency, which can delineate evolutionarily significant units and identify appropriate management units \cite[]{moritz1994defining, PALSBOLL200711}. In addition, the availability of migration rate can link to underlying population dynamics, allowing for a more precise and flexible evaluation of a management for many relevant topics including stock assessment in fisheries \cite[]{methot2013stock} and the invasive species control \cite[]{doi:10.1146/annurev.ecolsys.32.081501.114037}. 
 
 % 2: Mark recapture method can handle ecological scale but may miss the small migration rate
 
-There are essentially two approaches for estimating the contemporary migration rate. The first is to use the mark-recapture (MR) method that estimates migration rate along with other population parameters \cite[]{kery2011bayesian, Thorson_2021}. The rational is that, for example, conventional tags provide release and recovery location at known release and recovery dates, generating a movement fraction matrix among strata per given time interval. While this direct method is relatively easy to interpret, it is generally hampered by several sources of uncertainties, e.g., tag loss, tagging-related mortality, and reporting rate (REF). In addition, the MR method for estimating migration rate is generally limited in practice to situations where collection of a sufficient number of adult sample at multiple sites in a short period is available. 
+There are essentially two approaches for estimating the contemporary migration rate. The first is to use the mark-recapture (MR) method that estimates migration rate along with other population parameters \cite[]{kery2011bayesian, Thorson_2021}. The rational is that, for example, conventional tags provide release and recovery location at known release and recovery dates, generating a movement fraction matrix among strata per given time interval. While this direct method is relatively easy to interpret, it is generally hampered by several sources of uncertainties, e.g., tag loss, tagging-related mortality, and reporting rate \cite[]{hilborn2013quantitative}. In addition, the MR method for estimating migration rate is generally limited in practice to situations where collection of a sufficient number of adult sample at multiple sites in a short period is available. 
 
 % 3: Population genetics method can handle evolutionally scale but may miss the large migration rate
 
-The second is to use numerous genetic markers to assign individuals to source populations, allowing the inference of recent migration \cite[since][]{Pritchard_2000}. The model of \cite{Wilson_2003}, which is one of such population assignment (PA) methods and implemented in a software BayesAss, can output the point estimate as an element of a current migration matrix. However, as evaluated by several authors \cite[]{https://doi.org/10.1111/j.1365-294X.2007.03218.x, https://doi.org/10.1111/mec.12806}, the accuracy of estimated migration rates by the model is valid only when populations are highly differentiated ($F_{\rm ST}\ge0.05$), suggesting that it may be difficult to infer the degree of demographic dependency among populations since demographic independency is realized even if there are many migrants.  
+The second is to use numerous genetic markers to assign individuals to source populations, allowing the inference of recent migration \cite[since][]{https://doi.org/10.1111/j.1365-294X.1995.tb00227.x}. The model of \cite{Wilson_2003}, which is one of such population assignment methods and implemented in a software `BayesAss', can output the point estimate as an element of a current migration matrix. However, as evaluated by several authors \cite[]{https://doi.org/10.1111/j.1365-294X.2007.03218.x, https://doi.org/10.1111/mec.12806}, the accuracy of estimated migration rates by the model is valid only when populations are highly differentiated ($F_{\rm ST}\ge0.05$), suggesting that it may be difficult to infer the degree of demographic dependency among populations since demographic independency is realized even if there are many migrants. 
 
-% 4: CKMR can cover the range that Mark recapture can handle with more realistic situations
+% 4: Wang 2014 can handle ecological scale with realistic situations but limited to offspring movement
 
-Close-kin mark-recapture (CKMR) is a recently developed method for estimating adult population size along with life-history parameters that utilizes the information about kinship in a sample, owing to the recent advances in genetic methods for kinship determination \cite[recently reviewed in][]{https://doi.org/10.1111/faf.12615}. The rationale is that the presence of a kinship pair in the sample is analogous to the recapture of a marked individual in MR method. Kinship pairs in the sample are less likely to be observed in larger populations; thus, the number of kinship pairs may reflect an adult number in the population \cite[]{bravington2016close}. While recent studies of CKMR argued that availability of kinship information for applying estimation of migration rate \cite[]{https://doi.org/10.1002/ece3.6296, 10.1093/icesjms/fsac002}
+Parental assignments, which is based on genetic markers and often used as a complement to the population assignment method in ecological studies, also provide information about the current level of migration. In contrast to the population assignment method, the parental assignment method does not require the population differentiation \cite[]{https://doi.org/10.1111/mec.12806}. However, the current methodology focuses on estimating dispersal kernels and strongly depends on the assumption adults are not migrant, e.g., pollen/seeds dispersal in plants \cite[]{doi:10.1080/07352689.2010.481167} or larval drift in marine animals \cite[]{https://doi.org/10.1111/eva.12288}; thus, it does not apply the movement of iteroparous species that may change the spawning ground for each breeding season. 
 
-% 最近のConnの研究では、明示的に集団構造をCKMRの枠組みでキャプチャーしようとする枠組みについて議論されているが、その明示的な取り扱いやシミュレーションについては研究されていない。
+% 5: CKMR can cover the range that Mark recapture can handle with more realistic situations
 
-%This was possible owing to the recent advances in genetic methods for kinship determination \cite[]{Bravington_2016,bravington2016close,skaug2017parent,Hillary_2018} although similar methods have been proposed in the beginning of the 21st century \cite[]{nielsen2001statistical, pearse2001genetic, julius2001allele}. Besides, the rationale is that the presence of a kinship pair in the sample is analogous to the recapture of a marked individual in MR method. Kinship pairs in the sample are less likely to be observed in larger populations; thus, the number of kinship pairs may reflect $N$. While the original CKMR is designed to estimate adult abundance (i.e., $N$), the monitoring data for CKMR also produce the estimator of $N_{\rm e}$ by detecting half-sibling (HS) pairs within the same cohort \cite[]{Akita_2019}. This kinship-oriented estimation of $N_{\rm e}$ was presented in the context of the sibship assignment method \cite[]{wang2009new} and is expected to provide a much more accurate estimator as kinship determination becomes more accurate. 
+Close-kin mark-recapture (CKMR) is a recently developed method for estimating adult population size along with life-history parameters that utilizes the known kinship information in a sample \cite[reviewed in][]{https://doi.org/10.1111/faf.12615}. The rationale is that the presence of a kinship pair in the sample is analogous to the recapture of a marked individual in MR method. Kinship pairs in the sample are less likely to be observed in larger populations; thus, the number of kinship pairs may reflect an adult number in the population \cite[]{bravington2016close}. While recent studies of CKMR argued that availability of kinship information in estimating the migration rate \cite[]{https://doi.org/10.1002/ece3.6296, 10.1093/icesjms/fsac002}, the CKMR-based migration estimation has not been well developed and rigorously examined in a simulation study. 
 
-
-% 5: Wang 2014 can handle ecological scale with realistic situations but limited to offspring movement
 % 6: In this paper, ~
 
+In this study, we propose a new method for estimating the ratio of contemporary effective mother size to the census size (Ne,mNm) in a population, as a proxy of NeN. Assuming that kinships are ge- netically detected without any error, this method is based on the numbers of maternal-sibling (MS) and mother–offspring (MO) pairs in a sample. Sampling is completed at a single breeding time; sam- pling offspring within the same cohort and mothers probably shares MO relationship with sampled offspring. Our model provides a nearly unbiased estimator of Ne,mNm that explicitly incorporates two types of overdispersed reproduction (i.e., parental and nonpa- rental variations; Akita, 2020), making it possible to target a species that shows iteroparity (i.e., multiple reproductive cycles during the lifetime) and/or sweepstakes reproductive success. This estimator applying an iteroparous species corresponds to the estimator of the ratio of contemporary effective breeding mother size to the census size, Nb,mNm. First, we explain the modeling assumption and sam- pling scheme. Then, we analytically determine (nearly) the unbiased estimators of Ne,m, 1Nm, and Ne,mNm, which are based on the num- bers of MS and/or MO pairs. Finally, by running an individual-based model, we investigate the performance of the estimator and pro- vide a guide for a sample size. It is noteworthy that our modeling framework can be applied to diverse animal species. However, the description of the model focuses on fish species, which are presently the best candidate target of our proposed method.
 
-移動率の推定は，対象生物の理解に重要なだけでなく，外来種管理・希少種保全・資源の持続的利用にとっても重要である。　特に、水産資源管理にとっては、管理単位を決めるための指標として、移動率はクリティカルな指標の一つである。既存の方法論としては，大きく２種類に大別される。１つ目は標識再捕法であり，２つ目は集団遺伝学的な方法である。前者については，サンプル対象を再捕獲が見込める親個体に限定せざるを得ない，非侵襲的な方法でのラベリングが困難であること，推定精度に見合うサンプルサイズが現実的でないこと，報告率が大きくばらつく等が問題となっている。後者については，近年(すなわち$N_{\rm e}$よりも短い世代数)の集団構造については解像度がないこと，移動個体数が大きいと遺伝的には同一の集団とみなされること等が問題となっている。
+We theoretically developed unbiased estimators of the contemporary migration number (${\hat M_1}$--${\hat M_5}$) and migration rate (${\hat m_1}$--${\hat m_4}$) of parents between two populations in iteroparous species, where the migration direction is specified. The proposed estimators are based on known PO relationship and HS relationships observed between and within two populations without any error of kinship assignment. Users can choose the estimator developed for the situation as to whether the parental number of population 1 ($N_1$) and/or that of population 2 ($N_2$) is known ({\bf Table~\ref{parameter}}). The performance of the estimator (accuracy and precision) was quantitatively evaluated by running an individual-based model ({\bf Figure~\ref{violins}}; see also {\bf Table S1} in {\bf Supporting Information}). Our modeling framework utilizes several types of reproductive variations (survived offspring number per parent), including variance of reproductive potential between and within populations, taking account of several situations, including a body-size structure or environmental heterogeneity for reproductive success.
 
 本ノートでは，近親標識法(Close-kin mark-recapture, CKMR)という近年発達した方法論を用いて，移動率の推定を試みる。CKMRとは，親集団が小さいほど近親ペアが見つかりやすいことに着目した方法である。今回は，多回繁殖する生物を対象として，２つのサブ集団間で見つかる０歳の半兄弟(Half-sibling, HS)ペアを用いて，そのペアの親候補となる個体の数（もしくは移動率）を推定する。ただし，移動前の集団および移動後の集団における親魚尾数が，移動個体数の推定には必要となる。
-
-応用例として，３年間にわたって２つのサブ集団からサンプルされた当歳魚から見出される半兄弟ペアをもとに，個体数・移動率・生存率を推定する枠組みを提示する。そこでは，同じサブ集団から年を跨いで見つかる半兄弟ペアに基づく関係式と，今回新たに開発した関係式を組み合わせて用いる。
 
 \section{Theory}\label{sec2}
 In this section, we present the theoretical foundation for estimating a migrant number and a migration rate of iteroparous species using HS or PO pairs, which are found between two populations with a different sample timing. While the estimators can hold under flexible assumptions for reproduction (see {\bf Appendix 2}), here we assume a relatively simple situation for explanation purposes. The main symbols used in the current paper are summarized in {\bf Table \ref{symbols}}. 
@@ -332,8 +318,7 @@ Finally, we note some caveats in applying proposed method. Our theory for develo
 
 %  (e.g., \cite{Hastings_1993} numerically demonstrates that two populations become demographically independent when migration rate $< 0.1$)
 % withinのデータはどう使う？？withinとbetweenを比較して、betweenが優位に少ないかどうかなどが構造発見につながるかもconn et al 2020 EcolEvolもチェック
-%PRE-DEFINED population !
-%Caveat: selectivity, family correlated migration、skip spawning, 
+%% 今回提案した方法は、ゴーストポップがあっても大丈夫
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{ACKNOWLEDGMENTS}
