--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -99,7 +99,7 @@ The second is to use numerous genetic markers to assign individuals to source po
 
 % 4: Wang 2014 can handle ecological scale with realistic situations but limited to offspring movement
 
-Parental assignments, which is based on genetic markers and often used as a complement to the population assignment method in ecological studies, also provide information about the current level of migration. In contrast to the population assignment method, the parental assignment method does not require the population differentiation \cite[]{https://doi.org/10.1111/mec.12806}. However, the current methodology focuses on estimating dispersal kernels and strongly depends on the assumption adults are not migrant, e.g., pollen/seeds dispersal in plants \cite[]{doi:10.1080/07352689.2010.481167} or larval drift in marine animals \cite[]{https://doi.org/10.1111/eva.12288}; thus, it does not apply the movement of iteroparous species that may change the spawning ground for each breeding season. 
+Parental assignments, which is based on genetic markers and often used as a complement to the population assignment method in ecological studies, also provide information about the current level of migration. In contrast to the population assignment method, the parental assignment method does not require the population differentiation \cite[]{https://doi.org/10.1111/mec.12806}. However, the current methodology focuses on estimating dispersal kernels and strongly depends on the assumption adults are not migrant, e.g., pollen/seeds dispersal in plants \cite[]{doi:10.1080/07352689.2010.481167} or larval drift in marine animals \cite[]{https://doi.org/10.1111/eva.12288}; thus, it does not apply the movement of iteroparous species (i.e., multiple reproductive cycles during the lifetime) that may change the spawning ground for each breeding season. 
 
 % 5: CKMR can cover the range that Mark recapture can handle with more realistic situations
 
@@ -107,11 +107,9 @@ Close-kin mark-recapture (CKMR) is a recently developed method for estimating ad
 
 % 6: In this paper, ~
 
-In this study, we propose a new method for estimating the ratio of contemporary effective mother size to the census size (Ne,mNm) in a population, as a proxy of NeN. Assuming that kinships are ge- netically detected without any error, this method is based on the numbers of maternal-sibling (MS) and mother–offspring (MO) pairs in a sample. Sampling is completed at a single breeding time; sam- pling offspring within the same cohort and mothers probably shares MO relationship with sampled offspring. Our model provides a nearly unbiased estimator of Ne,mNm that explicitly incorporates two types of overdispersed reproduction (i.e., parental and nonpa- rental variations; Akita, 2020), making it possible to target a species that shows iteroparity (i.e., multiple reproductive cycles during the lifetime) and/or sweepstakes reproductive success. This estimator applying an iteroparous species corresponds to the estimator of the ratio of contemporary effective breeding mother size to the census size, Nb,mNm. First, we explain the modeling assumption and sam- pling scheme. Then, we analytically determine (nearly) the unbiased estimators of Ne,m, 1Nm, and Ne,mNm, which are based on the num- bers of MS and/or MO pairs. Finally, by running an individual-based model, we investigate the performance of the estimator and pro- vide a guide for a sample size. It is noteworthy that our modeling framework can be applied to diverse animal species. However, the description of the model focuses on fish species, which are presently the best candidate target of our proposed method.
+In this study, we propose a new method for estimating the contemporary migration number or rate of adults between the two pre-defined populations in iteroparous species, where the migration direction is specified. Assuming that kinships are genetically detected without any error, this method is based on the numbers of half-sibling (HS) and parent-offspring (PO) pairs in a sample. Sampling can be invasive or non-invasive and is completed at two breeding seasons; sampling offspring (young-of-year individuals) and parents probably shares PO relationship with sampled offspring in the one population at the first breeding season and in the another population at the second breeding season. The rationale is that the number of PO and HS pairs found between populations have information as to how often parental movements are realized. Our model explicitly incorporates reproductive variation within and between populations, making it possible to target a species whose fertility is affected by environmental differences between populations. 
 
-We theoretically developed unbiased estimators of the contemporary migration number (${\hat M_1}$--${\hat M_5}$) and migration rate (${\hat m_1}$--${\hat m_4}$) of parents between two populations in iteroparous species, where the migration direction is specified. The proposed estimators are based on known PO relationship and HS relationships observed between and within two populations without any error of kinship assignment. Users can choose the estimator developed for the situation as to whether the parental number of population 1 ($N_1$) and/or that of population 2 ($N_2$) is known ({\bf Table~\ref{parameter}}). The performance of the estimator (accuracy and precision) was quantitatively evaluated by running an individual-based model ({\bf Figure~\ref{violins}}; see also {\bf Table S1} in {\bf Supporting Information}). Our modeling framework utilizes several types of reproductive variations (survived offspring number per parent), including variance of reproductive potential between and within populations, taking account of several situations, including a body-size structure or environmental heterogeneity for reproductive success.
-
-本ノートでは，近親標識法(Close-kin mark-recapture, CKMR)という近年発達した方法論を用いて，移動率の推定を試みる。CKMRとは，親集団が小さいほど近親ペアが見つかりやすいことに着目した方法である。今回は，多回繁殖する生物を対象として，２つのサブ集団間で見つかる０歳の半兄弟(Half-sibling, HS)ペアを用いて，そのペアの親候補となる個体の数（もしくは移動率）を推定する。ただし，移動前の集団および移動後の集団における親魚尾数が，移動個体数の推定には必要となる。
+First, we explain the modeling assumption and sampling scheme. Then, we analytically determine the estimators of the contemporary migration number or rate of adults, which are based on the numbers of HS and/or PO pairs. Finally, by running an individual-based model, we investigate the performance of the estimator and provide a guide for a sample size. It is noteworthy that our modeling framework can be applied to diverse animal species. However, the description of the model focuses on fish species, which are presently the best candidate target of our proposed method.
 
 \section{Theory}\label{sec2}
 In this section, we present the theoretical foundation for estimating a migrant number and a migration rate of iteroparous species using HS or PO pairs, which are found between two populations with a different sample timing. While the estimators can hold under flexible assumptions for reproduction (see {\bf Appendix 2}), here we assume a relatively simple situation for explanation purposes. The main symbols used in the current paper are summarized in {\bf Table \ref{symbols}}. 
